# Stuv_Protokoll_Management

./: .env  README.md  docker-compose.yaml  docker-compose_complete.yaml  info.txt
app/: crud.py  gemini.py  main.py  models.py  pdf_utils.py  sql_app.db  test.ipynb
backend/app/: database.py  main.py
backend/app/crud/: crud.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
docker/document-classification/: requirements.txt
document-classification/: Dockerfile  requirements.txt
document-classification/data/intermidiate/: pdf_as_text.csv
document-classification/steps/: data_load.py
frontend/stuv_project/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/stuv_project/app/: layout.tsx  page.tsx
frontend/stuv_project/app/DocumentOverview/: page.tsx
frontend/stuv_project/app/LeweFan/: page.tsx
frontend/stuv_project/app/Notifications/: page.tsx
frontend/stuv_project/app/Profile/: page.tsx
frontend/stuv_project/app/ProfileOverview/: page.tsx
frontend/stuv_project/app/ProfileOverview/Accounts/: page.tsx
frontend/stuv_project/app/ProfileOverview/Notifications/: page.tsx
frontend/stuv_project/app/ProfileOverview/Profile/: page.tsx
frontend/stuv_project/app/UploadOverview/: page.tsx
frontend/stuv_project/app/Users/: page.tsx
frontend/stuv_project/videos/: Nackt_und_wild.mp4.json
pdf_handler/: pyproject.toml  test.ipynb
pdf_handler/src/pdf_handler/: pdf_handler.py
preprocessing/: pdf_handler.py  pdf_reader.ipynb  pyproject.toml  requirements.txt  test.ipynb
(+14 files in other folders)
