[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf_handler"
version = "0.0.1"
authors = [
  { name="Dominik Petermann"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf2==3.0.1",
    "pycryptodome==3.20.0",
    "pdfminer.six==20231228",
    "pydantic==2.5.3"
]

#[tool.pytest.ini_options]
#pythonpath = "src"